--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ html,body{
     /* justify-content: center; */
     align-items:  center;
     justify-content: space-between;
-    
 }
 
 #nav p{
@@ -62,7 +61,7 @@ html,body{
     text-align: right;
     margin-top: 20px;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 1vw;
     letter-spacing: 1px;
 }
 
@@ -72,6 +71,7 @@ html,body{
     justify-content:space-between;
     text-transform: uppercase;
     text-align: right;
+    font-size: 1.01vw;
     /* padding-left: 10px; */
     /* position: absolute;
     bottom: 1%; */
@@ -85,7 +85,7 @@ html,body{
     bottom: 1%;
 }
 .footer .left {
-    width: 50%;
+    width: 55%;
     display: flex;
     justify-content: space-between;
     position: absolute;
@@ -117,4 +117,86 @@ html,body{
     align-items: center;
     color: black;
     margin: 2px;
+}
+
+
+
+#secondPage{
+    width: 100%;
+    height: 150vh;
+    background-color: black;
+    padding: 200px 150px 0 50px;
+    /* padding-right: 0px; */
+    color: #fff;
+}
+
+.elem{
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4vw 0 4vw 0;
+    border-top: 1px solid rgba(142, 156, 155, 0.967);
+}
+
+.elem h1{
+    font-size: 7vw;
+    letter-spacing: 3px;
+    opacity: .7;
+    text-transform: uppercase;
+}
+
+.elem p{
+    font-size: 1vw;
+    color: #fff;
+}
+.elem img{
+    z-index: 999;
+    height: 140%;
+    display: none;
+    position: absolute;
+}
+
+.lastElem{
+    border-bottom: 1px solid rgba(142, 156, 155, 0.967);
+}
+
+
+
+#thirdPage{
+    padding: 10vw 10vw;
+    padding-left: 40vw;
+    background-color: black;
+    width: 100%;
+    gap: 100px;
+    color: white;
+    display: flex;
+    align-items: center;
+}
+
+#thirdPage img{
+    width: 200px;
+}
+
+#thirdPage h5{
+    opacity: .7;
+}
+#thirdPage p{
+    line-height: 1.7vw;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
+}
+
+#textAbout{
+    width: 25rem;
+    /* background-color: red; */
+}
+
+#textAbout a{
+    padding: 7px 26px;
+    border: 1px solid #fff;
+    border-radius: 100px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 15px;
 }
