--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html,body{
     position: absolute;
     z-index: 99999;
     border-radius: 50%;
+    transform: translate(-50%,-50%);
 }
 
 #main{
